--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Best Palindromes</h1>
+    <ul>
+        <li>tacocat</li>
+        <li>racecar</li>
+        <li>madam I'm adam</li>
+    </ul>
 </body>
 </html>
